feat: added/finished TicketWatcher tests